# sirius2

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Sirius.toml  biome.json  config.js  package.json  pnpm-lock.yaml  request.http  siriusu.toml  tsconfig.json  tsup.config.bundled_cheqrt7rwl.mjs  tsup.config.ts
common/: Cargo.toml
common/src/constant/: mod.rs
common/src/utils/: config.rs  io.rs
sirius/data/: default.json
src/: 1main.ts  client.ts  global.d.ts  index.ts  main.rs  main.ts  prelude.rs  server.ts  types.ts  utils.rs
src-ts/: client.ts  global.d.ts  index.ts  main.ts
src-ts/adt/: base.ts  utils.ts
src-ts/components/: gui.ts  helper.ts  land.ts  manager.ts  teleport.ts  utils.ts
src-ts/utils/: config.ts
src/adt/: base.ts  either.ts  maybe.ts  option.ts  result.ts  utils.ts  xor.ts
src/components/: helper.ts  index.ts  manager.ts  teleport.ts  utils.ts
src/framework/: command.ts  common.ts  data.ts  display.ts  error.ts  file.ts  gui.ts  itemUse.ts  particle.ts  request.ts  utils.ts
src/framework/adapter/: base.ts  client.ts  properties.ts  server.ts
static/gui/: about.json  teleport.json
